--- a/mensajes/template/home.html
+++ b/mensajes/template/home.html
@@ -1,8 +1,11 @@
 {% extends "base.html" %}
-{% block title %}Inicio - My Website{% endblock %}
+
+{% block title %}Mensajeria{% endblock %}
+
 {% block header %}
     <h1>Bienvenido creacion de mensajes</h1>
 {% endblock %}
+
 {% block content %}
     <p>Crear mensaje</p>
 {% endblock %}
