--- a/mensajes/template/navbar.html
+++ b/mensajes/template/navbar.html
@@ -1,7 +1,7 @@
 <nav>
     <ul style="list-style: none; padding: 0;  margin: 0; display: flex;">
-        <li style="margin-right: 20px;"><a href="{% url 'home' %}">inicio</li>
-        <li style="margin-right: 20px;"><a href="{% url 'ver' %}">ver</li>
-        <li style="margin-right: 20px;"><a href="{% url 'eliminar' %}">eliminar</li>
+        <li style="margin-right: 20px;"><a href="{% url 'home' %}">inicio<a></li>
+        <li style="margin-right: 20px;"><a href="{% url 'ver' %}">ver<a></a></li>
+        <li style="margin-right: 20px;"><a href="{% url 'eliminar' %}">eliminar<a></li>
     </ul>
 </nav>
