--- a/mensajes/template/ver.html
+++ b/mensajes/template/ver.html
@@ -11,4 +11,9 @@
     <p><strong>Texto:</strong> {{ mensaje.texto }}</p>
 
 </body>
+<footer>
+    <div>
+        <a href="{% url 'home' %}" class="btn btn-success">Ir al Home</a>    
+    </div>
+</footer>
 </html>
