Se crea la funcionalidad de eliminar mensaje

--- a/mensajes/template/ver_mensajes.html
+++ b/mensajes/template/ver_mensajes.html
@@ -48,7 +48,7 @@
             </form>
         </div>
         {% empty %}
-        <p>No hay mensajes para mostrar.</p>
+        <p>Mensaje eliminado correctamente.</p>
         {% endfor %}
     </div>
 </body>
