--- a/mensajes/template/home.html
+++ b/mensajes/template/home.html
@@ -7,12 +7,13 @@
 {% endblock %}
 
 {% block content %}
-<p>Buscar mensajes</p>
-<form action="{% url 'ver_mensajes' %}" method="POST">
-    <input name="usuario" value="{{ usuario }}">
-    {% csrf_token %}
-    <button type="submit">Buscar</button>
-</form>
+    <p>Buscar mensajes</p>
+    <form action="{% url 'ver_mensajes' %}" method="POST">
+        <input type = "text" name="usuario" required value="{{ usuario }}">
+        {% csrf_token %}
+        <button type="submit">Buscar</button>      
+
+    </form>
     <p>Crear mensaje</p>
     <form method="POST">
         {% csrf_token %}
