--- a/mensajes/template/ver.html
+++ b/mensajes/template/ver.html
@@ -1,19 +1,20 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalles del Mensaje</title>
-</head>
-<body>
-    <h1>Detalles del Mensaje Guardado</h1>
-    <p><strong>Remitente:</strong> {{ mensaje.remitente }}</p>
-    <p><strong>Destinatario:</strong> {{ mensaje.destinatario }}</p>
-    <p><strong>Texto:</strong> {{ mensaje.texto }}</p>
+{% extends "base.html" %}
 
-</body>
-<footer>
+{% block title %}Mensajeria{% endblock %}
+
+{% block header %}
+    <h1>Bienvenido creacion de mensajes</h1>
+{% endblock %}
+
+{% block content %}
+    
+    <title>Detalles del Mensaje</title>
+    
+        <h1>Detalles del Mensaje Guardado</h1>
+        <p><strong>Remitente:</strong> {{ mensaje.remitente }}</p>
+        <p><strong>Destinatario:</strong> {{ mensaje.destinatario }}</p>
+        <p><strong>Texto:</strong> {{ mensaje.texto }}</p>
     <div>
         <a href="{% url 'home' %}" class="btn btn-success">Ir al Home</a>    
     </div>
-</footer>
-</html>
+{% endblock %}
