Se aplico navbar y navegacion entre paginas

--- a/mensajes/template/base.html
+++ b/mensajes/template/base.html
@@ -11,6 +11,7 @@
         <h1>{% block header %}Welcome to My Website{% endblock %}</h1>
        
     </header>
+    {% include 'navbar.html'%}
     
     <div class="content">
         {%block content %}{% endblock %}  
