--- a/mensajes/template/ver.html
+++ b/mensajes/template/ver.html
@@ -6,7 +6,7 @@
     <h1>Bienvenido creacion de mensajes</h1>
 {% endblock %}
 
-{% block content %}
+<!--{% block content %}
     
     <title>Detalles del Mensaje</title>
     
@@ -17,4 +17,4 @@
     <div>
         <a href="{% url 'home' %}" class="btn btn-success">Ir al Home</a>    
     </div>
-{% endblock %}
+{% endblock %}-->
