se corrigieron erroresç

--- a/mensajes/template/buscar.html
+++ b/mensajes/template/buscar.html
@@ -3,7 +3,7 @@
 {% block title %}Mensajeria{% endblock %}
 
 {% block header %}
-    <h1>Bienvenido creacion de mensajes</h1>
+    <h1>Busqueda y eliminacion de mensajes</h1>
 {% endblock %}
 
 {% block content %}
